# rForth

./: .gitignore  CMakeLists.txt  LICENCE  README.md  check-format.sh  generate-version.sh  partitions.csv  sdkconfig
examples/: esp32-usart.cpp  linux.cpp
forth/: core.fs  memory.fs  task_test.fs
forth/tests/: file_test.fs  numbers_test.fs  stress_test.fs  task_test.fs
main/: CMakeLists.txt  main.cpp  main_esp.cpp  main_esp32.cpp  main_linux.cpp
main/core/: ceforth.cpp  ceforth.h  config.h  rForth.cpp  rForth.h
main/platform/: esp.cpp  esp32-usart.cpp  esp32.cpp  linux.cpp  mcu.h
src/: rForth.cpp  rForth.h
